--- a/templates/core/campaign_page_bar.html
+++ b/templates/core/campaign_page_bar.html
@@ -138,7 +138,7 @@
 		  <a href="http://ripplefunction.com" target="ripple"><img src="{%url static 'images/logo-2color-blue-S.png' %}" /></a>
                 </div>
 		<div id="content">
-			<div id="copy-text">Instant <strong>{{campaign.title}}</strong> just by sharing!</div>
+			<div id="copy-text"><strong>{{campaign.title}}</strong></div>
 			<div id="buttons">
 				<button id="twitter-login"></button>
 				<button id="facebook-login"></button>
