Putting the check for iframe leaving main page back in.

--- a/templates/core/campaign_page_bar.html
+++ b/templates/core/campaign_page_bar.html
@@ -164,6 +164,14 @@
 	<iframe src="{{campaign.url}}" id="external-site" frameborder="0" scrolling="auto"></iframe>
 
 <script>
+function closeIt()
+{
+     return "This will redirect your page to the URL within the iframe. You probbaly don't want this.";
+}
+window.onbeforeunload = closeIt;
+</script>
+
+<script>
 // Global vars
 var contentView = 0;
 var shareLink = '';
