--- a/templates/core/campaign_admin2.html
+++ b/templates/core/campaign_admin2.html
@@ -103,6 +103,14 @@
 </div>
 
 <script>
+function closeIt()
+{
+     return "This will redirect your page to the URL within the iframe. You probbaly don't want this.";
+}
+window.onbeforeunload = closeIt;
+</script>
+
+<script>
 
 $(document).ready(function(){
    $("#info-overlay").overlay();
