--- a/templates/core/campaign_page.html
+++ b/templates/core/campaign_page.html
@@ -172,6 +172,14 @@
 </div>
 
 <script>
+function closeIt()
+{
+     return "This will redirect your page to the URL within the iframe. You probbaly don't want this.";
+}
+window.onbeforeunload = closeIt;
+</script>
+
+<script>
 
 function refreshAttendee()
 {
