--- a/templates/core/campaign_page2.html
+++ b/templates/core/campaign_page2.html
@@ -188,6 +188,13 @@
     </iframe>
 </div>
 
+<script>
+function closeIt()
+{
+     return "This will redirect your page to the URL within the iframe. You probbaly don't want this.";
+}
+window.onbeforeunload = closeIt;
+</script>
 
 <script>
 // Global vars
