Change redirect popup message to suck less.

--- a/templates/core/campaign_page_bar.html
+++ b/templates/core/campaign_page_bar.html
@@ -156,7 +156,7 @@
 <script>
 function closeIt()
 {
-     return "This will redirect this page to the URL within the iframe. You probbaly don't want this.";
+     return "Your browser wants to leave this page. Leave if you are checking out or closing your window.";
 }
 window.onbeforeunload = closeIt;
 </script>
