Change popup message in remaining files

--- a/templates/core/campaign_admin2.html
+++ b/templates/core/campaign_admin2.html
@@ -105,7 +105,7 @@
 <script>
 function closeIt()
 {
-     return "This will redirect your page to the URL within the iframe. You probbaly don't want this.";
+     return "Your browser wants to leave this page. Leave if you are checking out or closing your window.";
 }
 window.onbeforeunload = closeIt;
 </script>
