--- a/templates/core/campaign_page.html
+++ b/templates/core/campaign_page.html
@@ -174,7 +174,7 @@
 <script>
 function closeIt()
 {
-     return "This will redirect your page to the URL within the iframe. You probbaly don't want this.";
+     return "Your browser wants to leave this page. Leave if you are checking out or closing your window.";
 }
 window.onbeforeunload = closeIt;
 </script>
